--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hoja de vida</title>
+    <title>Mi primer hoja de vida</title>
 </head>
 <body>
+    <h1>Santiago Cardona Herrera</h1>
+    <h4>Por hay vamos</h4>
     
 </body>
 </html>
