agrega lines de texto 20

--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <title>Mi primer hoja de vida</title>
 </head>
 <body>
-    <h1>Santiago Cardona Herrera</h1>
-    <h4>Por hay vamos</h4>
-    
+    <div class="container">
+    <div class="profile">
+        <img src="">
+       <h1>Santiago Cardona Herrera</h1>
+       <h4>Practicante de sistemas</h4>
+    </div>
+    </div>
+
+    <div class="section">
+        <h3>Perfil</h3>
+        <p>
+            soy un estudiante de programacion de censa manizales
+        </p>
+    </div>
+
 </body>
 </html>
