informacion de perfil

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 </head>
 <body>
     <div class="container">
+    <div class="left-column">
     <div class="profile">
         <img src="">
+        <div class="text-content">
        <h1>Santiago Cardona Herrera</h1>
        <h4>Practicante de sistemas</h4>
+       <hr>
     </div>
     </div>
 
@@ -19,7 +22,12 @@
         <p>
             soy un estudiante de programacion de censa manizales
         </p>
+        <hr>
     </div>
-
+    <div class="section">
+        <h3>Perfil</h3>
+        <p>
+            tengo un  tecnico en diseño grafico
+        </p>
 </body>
 </html>
