se creo archi9vop html donde se muestra toda la hija de vida de santiago cardona herrera

--- a/index.html
+++ b/index.html
@@ -1,33 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi primer hoja de vida</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-    <div class="left-column">
-    <div class="profile">
-        <img src="">
-        <div class="text-content">
-       <h1>Santiago Cardona Herrera</h1>
-       <h4>Practicante de sistemas</h4>
-       <hr>
-    </div>
-    </div>
+      <div class="left-column">
+        <div class="profile">
+          <img src="" />
+          <div class="text-content">
+            <h1>Santiago Cardona Herrera</h1>
+            <h4>Practicante de sistemas</h4>
+            <hr />
+          </div>
+        </div>
 
-    <div class="section">
-        <h3>Perfil</h3>
-        <p>
-            soy un estudiante de programacion de censa manizales
-        </p>
-        <hr>
+        <div class="section">
+          <h3>Perfil</h3>
+          <p>soy un estudiante de programacion de censa manizales</p>
+          <hr />
+        </div>
+        <div class="section">
+          <h3>Perfil</h3>
+          <p>tengo un tecnico en diseño grafico</p>
+        </div>
+
+        <div class="section">
+          <h3>contactos</h3>
+          <ul>
+            <li><i class="fas fa-map-market-alt"></i>Manizales, Caldas</li>
+            <li>
+              <i class="fas fa-evelope"></i>santiago cardona0925@gmail.com
+            </li>
+            <li><i class="fas fa-phone"></i>3148400593</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="right-column">
+        <div class="section">
+          <h3>habilidades</h3>
+          <ul>
+            <li>html,css,illustrator,indesing,animate,python,photoshop</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="section">
+        <h3>Experiencia laboral</h3>
+        <div class="job">
+          <h4>
+            diseño para una marca de cervezas,diseña para un restaurante,diseño
+            de una pagina web
+          </h4>
+          <p>ENE 2023 - 2024</p>
+          <ul>
+            <li>
+              ogfrece diseños de logos para emoresas y emprendimintos
+              personales.
+            </li>
+          </ul>
+        </div>
+        <div class="job">
+          <h4>unitecnica,diseñados grafico</h4>
+          <p>ENE 2023 - DIC 2024</p>
+          <ul>
+            <li>desarrolla logos para empresas y emprendimientos.</li>
+          </ul>
+        </div>
+
+        <div class="section">
+          <h3>Educacion</h3>
+          <ul>
+            <li>
+              grado fe y alegria la paz <br />
+              <b>ENE 2011 - DIC 2022</b>
+            </li>
+            <li>
+              bachiller <br />
+              <b>2023 - 2024 </b>
+            </li>
+            <li>
+              tecnico en programacion <br />
+              <b>censa manizales</b>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="section">
-        <h3>Perfil</h3>
-        <p>
-            tengo un  tecnico en diseño grafico
-        </p>
-</body>
+  </body>
 </html>
