--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Mi primer hoja de vida</title>
   </head>
   <body>
     <div class="container">
       <div class="left-column">
         <div class="profile">
-          <img src="" />
+          <img src="resources/img/9bb9f12d-71ca-4cb4-bef7-52558f8ac11e.jfif" />
           <div class="text-content">
             <h1>Santiago Cardona Herrera</h1>
             <h4>Practicante de sistemas</h4>
@@ -46,47 +47,47 @@
             <li>html,css,illustrator,indesing,animate,python,photoshop</li>
           </ul>
         </div>
-      </div>
-
-      <div class="section">
-        <h3>Experiencia laboral</h3>
-        <div class="job">
-          <h4>
-            diseño para una marca de cervezas,diseña para un restaurante,diseño
-            de una pagina web
-          </h4>
-          <p>ENE 2023 - 2024</p>
-          <ul>
-            <li>
-              ogfrece diseños de logos para emoresas y emprendimintos
-              personales.
-            </li>
-          </ul>
-        </div>
-        <div class="job">
-          <h4>unitecnica,diseñados grafico</h4>
-          <p>ENE 2023 - DIC 2024</p>
-          <ul>
-            <li>desarrolla logos para empresas y emprendimientos.</li>
-          </ul>
-        </div>
 
         <div class="section">
-          <h3>Educacion</h3>
-          <ul>
-            <li>
-              grado fe y alegria la paz <br />
-              <b>ENE 2011 - DIC 2022</b>
-            </li>
-            <li>
-              bachiller <br />
-              <b>2023 - 2024 </b>
-            </li>
-            <li>
-              tecnico en programacion <br />
-              <b>censa manizales</b>
-            </li>
-          </ul>
+          <h3>Experiencia laboral</h3>
+          <div class="job">
+            <h4>
+              diseño para una marca de cervezas,diseña para un
+              restaurante,diseño de una pagina web
+            </h4>
+            <p>ENE 2023 - 2024</p>
+            <ul>
+              <li>
+                ogfrece diseños de logos para emoresas y emprendimintos
+                personales.
+              </li>
+            </ul>
+          </div>
+          <div class="job">
+            <h4>unitecnica,diseñados grafico</h4>
+            <p>ENE 2023 - DIC 2024</p>
+            <ul>
+              <li>desarrolla logos para empresas y emprendimientos.</li>
+            </ul>
+          </div>
+
+          <div class="section">
+            <h3>Educacion</h3>
+            <ul>
+              <li>
+                grado fe y alegria la paz <br />
+                <b>ENE 2011 - DIC 2022</b>
+              </li>
+              <li>
+                bachiller <br />
+                <b>2023 - 2024 </b>
+              </li>
+              <li>
+                tecnico en programacion <br />
+                <b>censa manizales</b>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
